# puaia-capeet-plugin

./: AGENTS.md  CONTEXT.md  config.toml  plan.md  pyproject.toml
.agents/skills/puaia-plugin/: SKILL.md
capeet/: plugin.py
