[project]
name = "puaia-carpeet-plugin"
version = "0.1.0"
description = "PuAiA plugin that ingests concert listings from capeet.com"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[tool.puaia]
plugin = "capeet.plugin.CapeetPlugin"

[project.entry-points."puaia.plugins"]
capeet = "capeet.plugin:CapeetPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
