[project]
name = "puaia-capeet-plugin"
version = "0.1.0"
description = "PuAiA plugin that ingests concert listings from capeet.com"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.puaia]
plugin = "capeet.plugin.CapeetPlugin"

[project.entry-points."puaia.plugins"]
capeet = "capeet.plugin:CapeetPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
